:construction_worker: Updates LaTeX ci to upload all reports to the same artifact #14

--- a/.github/workflows/check-latex.yml
+++ b/.github/workflows/check-latex.yml
@@ -15,30 +15,22 @@ jobs:
               id: check_es
               with:
                   root_file: doc/proyecto.tex
-
-                  ## Defaults:
-                  # working_directory:
-                  # report_type: html
-                  # report_file: report.html
+                  report_file: report_es.html
 
                   ## Custom arguments for TeXtidote
                   args: --check es --remove otherlanguage
-            - name: Upload TeXtidote spanish report
-              uses: actions/upload-artifact@v2
-              with:
-                  name: textidote_report_es
-                  path: report.html
             - name: Check English text
               uses: ChiefGokhlayeh/textidote-action@v5
               id: check_en
               with:
                   root_file: doc/prefacios/english_abstract.tex
+                  report_file: report_en.html
                   args: --check en --read-all
-            - name: Upload TeXtidote english report
-              uses: actions/upload-artifact@v2
+            - name: Upload TeXtidote report
+              uses: actions/upload-artifact@v3
               with:
-                  name: textidote_report_en
-                  path: report.html
+                  name: textidote_report
+                  path: report_*.html
             - name: Throw error if warnings exist
               if: ${{ steps.check_es.outputs.num_warnings != 0 || steps.check_en.outputs.num_warnings != 0}}
               run: 'echo "::error file=doc/proyecto.tex::num_warnings_es: ${{ steps.check_es.outputs.num_warnings }}, num_warnings_en: ${{ steps.check_en.outputs.num_warnings }}"; exit 1;'
