--- a/.github/workflows/check-latex.yml
+++ b/.github/workflows/check-latex.yml
@@ -7,6 +7,8 @@ on:
 jobs:
     check_latex:
         runs-on: ubuntu-latest
+        env:
+            IgnoreArgs: --ignore sh:seclen,sh:stacked --remove-macros tableofcontents,listoffigures,listoftables,begin,centeroffset,oddsidemargin,evensidemargin,centering,bfseries,end,cleardoublepage
         steps:
             - name: Set up Git repository
               uses: actions/checkout@v2
@@ -16,16 +18,14 @@ jobs:
               with:
                   root_file: doc/proyecto.tex
                   report_file: report_es.html
-
-                  ## Custom arguments for TeXtidote
-                  args: --check es --remove otherlanguage
+                  args: --check es --remove otherlanguage $IgnoreArgs
             - name: Check English text
               uses: ChiefGokhlayeh/textidote-action@v5
               id: check_en
               with:
                   root_file: doc/prefacios/english_abstract.tex
                   report_file: report_en.html
-                  args: --check en --read-all
+                  args: --check en --read-all $IgnoreArgs
             - name: Upload TeXtidote report
               uses: actions/upload-artifact@v3
               with:
