:technologist: Defines testing tasks on Makefiles #25
+ Closes #25 by adding necessary files for a task runner with some basic tasks defined for both documentation and code.

Add tasks useful for latex to task runner

Add dependencies for testing

Add task runner and tasks for python checks

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,5 +1,7 @@
 DOC := proyecto.tex
 
+spellargs := --ignore sh:seclen,sh:stacked --remove-macros tableofcontents,listoffigures,listoftables,begin,centeroffset,oddsidemargin,evensidemargin,centering,bfseries,end,cleardoublepage,setlength
+
 all: doc
 
 doc: $(DOC:.tex=.pdf)
@@ -9,5 +11,13 @@ all: proyecto.pdf
 %.pdf: %.tex
 	pdflatex $< && bibtex $* && pdflatex $< && pdflatex $<
 
+clean:
+	rm -f *.log *.toc *.out *.bbl *.lof *.lot *.blg *.aux *.synctex.gz
 
+check: es-check en-check
 
+es-check:
+	textidote --check es --remove otherlanguage --dict ../.github/workflows/words-allowlist.txt $(spellargs) proyecto.tex
+
+en-check:
+	textidote --check en --read-all $(spellargs) prefacios/english_abstract.tex
