--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
+wemake-python-styleguide = "^0.16.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
