:construction_worker: Updates build-latex workflow to upload a build artifact #28
+ Closes #28 by setting action to upload the compiled latex PDF when integrating with master branch
+ Also fix some tabs / spaces inconsistencies

--- a/.github/workflows/check-latex.yml
+++ b/.github/workflows/check-latex.yml
@@ -1,9 +1,5 @@
 name: Lint, spell & grammar check LaTeX document
-on:
-    push:
-    pull_request:
-        branches:
-            - master
+on: push
 jobs:
     check_latex:
         runs-on: ubuntu-latest
