--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -1,13 +1,19 @@
 name: Build LaTeX document
-on: [push, pull_request]
+on: push
 jobs:
-  build_latex:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Git repository
-        uses: actions/checkout@v2
-      - name: Compile LaTeX document
-        uses: xu-cheng/latex-action@v2
-        with:
-          working_directory: doc/
-          root_file: proyecto.tex
+    build_latex:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Set up Git repository
+              uses: actions/checkout@v2
+            - name: Compile LaTeX document
+              uses: xu-cheng/latex-action@v2
+              with:
+                  working_directory: doc/
+                  root_file: proyecto.tex
+            - name: Upload PDF as artifact
+              if: ${{ github.ref == 'refs/heads/master' }}
+              uses: actions/upload-artifact@v3
+              with:
+                  name: report-pdf
+                  path: main.pdf
