:memo: Describes the development of the first milestone #31
+ Closes 31 by justifying decisions made on the development of the first milestone

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,6 @@
 DOC := proyecto.tex
 
-spellargs := --ignore sh:seclen,sh:stacked --remove-macros tableofcontents,listoffigures,listoftables,begin,centeroffset,oddsidemargin,evensidemargin,centering,bfseries,end,cleardoublepage,setlength
+spellargs := --ignore sh:seclen,sh:stacked --remove-macros tableofcontents,listoffigures,listoftables,begin,centeroffset,oddsidemargin,evensidemargin,centering,bfseries,end,cleardoublepage,setlength,texttt
 
 all: doc
 
