--- a/song2txt/uspitch/pyproject.toml
+++ b/song2txt/uspitch/pyproject.toml
@@ -5,6 +5,12 @@ description = "Command-line utility to estimate pitches for a UltraStar txt file
 authors = ["dipzza <dipzza@disroot.org>"]
 license = "AGPLv3"
 
+[tool.poetry.dependencies]
+python = ">=3.7, <3.11"
+charset-normalizer = "^2.1.0"
+crepe = "^0.0.12"
+pydub = "^0.25.1"
+
 [tool.poetry.dev-dependencies]
 
 [build-system]
