--- a/song2txt/uspitch/pyproject.toml
+++ b/song2txt/uspitch/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.7, <3.11"
 charset-normalizer = "^2.1.0"
 crepe = "^0.0.12"
 pydub = "^0.25.1"
+tensorflow = "^2.9.1"
 
 [tool.poetry.dev-dependencies]
 
