--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ license = "AGPLv3"
 python = ">=3.7, <3.11"
 charset-normalizer = "^2.1.0"
 crepe = "^0.0.12"
-pydub = "^0.25.1"
 tensorflow = "^2.9.1"
+librosa = "^0.9.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
