:green_heart: Fix CI Build #42
+ Closes #42 by installing missing libsndfile library

--- a/.github/workflows/check-python.yml
+++ b/.github/workflows/check-python.yml
@@ -14,6 +14,8 @@ jobs:
               run: pip install poetry
             - name: Install poetry dependencies
               run: poetry install
+            - name: Install sndfile
+              run: sudo apt-get install libsndfile1
             - name: Run unit tests
               run: make test
             - name: Run coverage test
