--- a/.github/workflows/check-python.yml
+++ b/.github/workflows/check-python.yml
@@ -10,12 +10,12 @@ jobs:
               uses: actions/setup-python@v2
               with:
                 python-version: '3.x'
+            - name: Install sndfile
+              run: sudo apt-get install libsndfile1
             - name: Install poetry
               run: pip install poetry
             - name: Install poetry dependencies
-              run: poetry install
-            - name: Install sndfile
-              run: sudo apt-get install libsndfile1
+              run: make install
             - name: Run unit tests
               run: make test
             - name: Run coverage test
